# xyz-dl

./: .gitignore  AGENTS.md  README.md  api.py  auth.py  build.ps1  config.py  downloader.py  main.py  pyproject.toml  utils.py
tests/: test_api.py
