[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xyz-dl"
version = "0.1.0"
description = "A CLI downloader for www.xiaoyuzhoufm.com"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.4",
    "tqdm>=4.66.0",
]

[project.scripts]
xyz-dl = "main:main"

[tool.setuptools]
py-modules = ["main", "auth", "api", "config", "downloader", "utils"]

[dependency-groups]
dev = [
    "pyinstaller>=6.18.0",
]
